# zk-fire

./: README.md
fuego-prover/claim-tui/: Cargo.toml
fuego-prover/claim-tui/src/: main.rs
fuego-prover/fuego-circuit/: Cargo.toml
fuego-prover/fuego-circuit/src/: main.rs
fuego-prover/fuego-prover-cli/: Cargo.toml
fuego-prover/fuego-prover-cli/src/: main.rs
xfg-stark/: .gitignore  Cargo.toml  ED25519_SIGNATURE_VERIFICATION.md  FuegoCommitmentMerkleVerifier.sol  HEATBurnProofVerifier_v3.sol  IMPLEMENTATION_SUMMARY_V3.md  LICENSE  QUICK_START_ED25519.md  TierConversions.sol
xfg-stark/.github/workflows/: release-stark-cli.yml  release.yml
xfg-stark/docs/: PRIVACY_BEST_PRACTICES.md  README.md  TIER_STRUCTURE.md  XFG_STARK_PROOF_USER_GUIDE.md
xfg-stark/interfaces/: IArbSys.sol  IEd25519Verifier.sol
xfg-stark/scripts/: build-cli.sh
xfg-stark/src/: ascii_arts.rs  burn_mint_air.rs  burn_mint_prover.rs  burn_mint_verifier.rs  fuego_rpc.rs  lib.rs  proof_data_schema.rs  test_data_generator.rs  winterfell_air.rs  winterfell_integration.rs
xfg-stark/src/air/: boundaries.rs  constraints.rs  evaluation.rs  mod.rs  security.rs  transitions.rs
xfg-stark/src/benchmarks/: mod.rs  winterfell_benchmarks.rs
xfg-stark/src/field/: mod.rs
xfg-stark/src/polynomial/: mod.rs
xfg-stark/src/proof/: fri.rs  merkle.rs  mod.rs  trace.rs  verification.rs
xfg-stark/src/stark/: mod.rs
xfg-stark/src/types/: field.rs  mod.rs  polynomial.rs  secret.rs  stark.rs
xfg-stark/src/utils/: mod.rs
xfg-stark/src/winterfell_integration/: tests.rs
xfg-stark/tests/: COLDProofVerifier_v3.test.ts
xfg-stark/v1/: clean_validation.rs  standalone_winterfell_demo  standalone_winterfell_demo.rs  xfg-stark-enhanced-cli.rs
xfg-stark/v1/api/: .env.example  README.md  package.json  tsconfig.json
xfg-stark/v1/contracts/: BatchedRewardsPool.sol  COLDAOGovernor.sol  COLDDepositProofVerifier.sol  COLDProofVerifier.sol  FuegoBlockHeaderRelay.sol  FuegoCOLDAOToken.sol  HEATBurnProofVerifier.sol  HEATToken.sol  ICOLDAOGovernor.sol  LPRewardsManager.sol  WinterfellVerifier.sol
xfg-stark/v1/docs/: BATCHED_REWARDS_DESIGN.md  COLD_PROOF_SUBMISSION_FLOW.md  COLD_SIMPLIFIED_TIER_UPDATE.md  COLD_TESTNET_DEPLOYMENT.md  COLD_TIER_REFERENCE.md  DECIMAL_REFERENCE.md  ED25519_IMPLEMENTATION_SUMMARY.md  FRONTEND_DEPLOYMENT_GUIDE.md  FRONTEND_STATUS.md  IMPLEMENTATION_SUMMARY_OPTION_B.md  INTEGRATION_TESTING.md  LP_REWARDS_DISTRIBUTION.md  PRIVACY_DEPLOYMENT_ROADMAP.md  README.md  api.md  (+3 more)
(+52 files in other folders)
