[workspace]

[package]
name = "xfg-stark"
version = "0.1.0"
edition = "2021"
authors = ["XFG STARK Team"]
description = "XFG STARK Proof Implementation"
autobins = false
autoexamples = false

[features]
default = ["std"]
std = []
no_std = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1.0"
bincode = "1.3"
sha2 = "0.10"
rand = "0.8"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
indicatif = "0.17"

# HTTP client for Fuego daemon RPC
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Winterfell framework dependencies
winterfell = "0.8"
winter-crypto = "0.8"
winter-math = "0.8"
winter-utils = "0.8"

# Additional cryptographic dependencies
blake3 = "1.8"
ripemd = "0.1"
hex = "0.4"
sha3 = "0.10"

[dev-dependencies]
quickcheck = "1.0"

[[bin]]
name = "xfg-stark-cli"
path = "src/bin/xfg-stark-cli.rs"
