[package]
name = "fuego-prover-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fuego-prover"
path = "src/main.rs"

[dependencies]
fuego-prover-core = { path = "../fuego-prover-core" }
clap        = { version = "4", features = ["derive"] }
reqwest     = { version = "0.12", features = ["blocking", "json"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
hex         = "0.4"
anyhow      = "1"
sp1-sdk     = "3"
tiny-keccak = { version = "2", features = ["keccak"] }
